--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding-Quiz</title>
-    <link rel="stylesheet" href="./assets/css/stylesheet.css">
-</head>
-<body>
-    <h1>Hello</h1>
-    
+    <link rel="stylesheet" href="./assets/css/stylesheet.css" />
+  </head>
+  <body>
+    <header>
+      <h3>View Highscores</h3>
+      <h3>Time:</h3>
+    </header>
+    <section>
+      <h1>Coding Quiz Challenge</h1>
+      <p>
+        Try to answer the following code-related questions within the time
+        limit. Keep in mind that incorrect answers will penalize your scoreTime
+        by ten seconds!
+      </p>
+      <button>Start Quiz</button>
+    </section>
+
     <script src="./assets/JS/script.js"></script>
-</body>
+  </body>
 </html>
