added event listener to start timmer when start quiz is clicked.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h3>View Highscores</h3>
-      <h3>Time:</h3>
+      <h3 id="timer"></h3>
     </header>
     <section>
       <h1>Coding Quiz Challenge</h1>
@@ -19,7 +19,7 @@
         limit. Keep in mind that incorrect answers will penalize your scoreTime
         by ten seconds!
       </p>
-      <button>Start Quiz</button>
+      <button id="start-quiz">Start Quiz</button>
     </section>
 
     <script src="./assets/JS/script.js"></script>
