--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
       <h3>View Highscores</h3>
       <h3 id="timer"></h3>
     </header>
-    <section>
+    <section id="quiz-info">
       <h1>Coding Quiz Challenge</h1>
       <p>
         Try to answer the following code-related questions within the time
         limit. Keep in mind that incorrect answers will penalize your scoreTime
         by ten seconds!
       </p>
-      <button id="start-quiz">Start Quiz</button>
+      <button id="start-button">Start Quiz</button>
     </section>
+    <!-- <section >
+        <h1>HELLO</h1>
+
+    </section> -->
 
     <script src="./assets/JS/script.js"></script>
   </body>
