add some styles to questions and code to shuffle through questions and answers.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h3 id="timer"></h3>
     </header>
     <div class="container">
-      <section id="quiz-info" class="display">
+      <section id="quiz-info">
         <h1>Coding Quiz Challenge</h1>
         <p>
           Try to answer the following code-related questions within the time
@@ -22,7 +22,7 @@
         </p>
         <button id="start-button">Start Quiz</button>
       </section>
-      <section id="quiz-container">
+      <section id="quiz-container" class="display">
         <h3 id="question">Questions</h3>
         <p id="answer-zero" class="box" data-number="0">answer zero</p>
         <p id="answer-one" class="box" data-number="1">answer one</p>
