added event listener for user input and saved in local storage. When button is clicked for submission it will go to the final highscores display page.

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <p id="answer-two" class="box" data-number="2">answer two</p>
         <p id="answer-three" class="box" data-number="3">answer three</p>
       </section>
-      <section id="enter-score">
-          <h3>All Done!</h3>
-          <p> Your final score is _____.</p>
-          <input type="text" placeholder="Enter Initials" id="user-initials">
-          <button type="submit" id="user-initials-value">Submit</button>
+      <section id="enter-score" class="display">
+          <h2>All Done!</h2>
+          <p>Final Score</p>
+          <input type="text" name="user-initials" placeholder="Enter Initials" id="user-initials">
+          <button id="submit">Submit</button>
 
       </section>
       <section id="high-scores" class="display">
-          <h1> Highscores </h1>
+          <h1>Highscores</h1>
       </section>
     </div>
     <script src="./assets/JS/script.js"></script>
