formated document, fixed highscore page, and set everything in local store to display.

--- a/index.html
+++ b/index.html
@@ -30,14 +30,19 @@
         <p id="answer-three" class="box" data-number="3">answer three</p>
       </section>
       <section id="enter-score" class="display">
-          <h2>All Done!</h2>
-          <p>Final Score</p>
-          <input type="text" name="user-initials" placeholder="Enter Initials" id="user-initials">
-          <button id="submit">Submit</button>
-
+        <h2>All Done!</h2>
+        <p>Final Score</p>
+        <input
+          type="text"
+          name="user-initials"
+          placeholder="Enter Initials"
+          id="user-initials"
+        />
+        <button id="submit">Submit</button>
       </section>
       <section id="high-scores" class="display">
-          <h1>Highscores</h1>
+        <h1>Highscores</h1>
+        <ol id="list-scores"></ol>
       </section>
     </div>
     <script src="./assets/JS/script.js"></script>
