added buttons to play again or clear scores, positioned in css, and got buttons to work.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <section id="high-scores" class="display">
         <h1>Highscores</h1>
         <ol id="list-scores"></ol>
+        <button id="play-again">Play Again</button>
+        <button id="clear-scores">Clear Scores</button>
       </section>
     </div>
     <script src="./assets/JS/script.js"></script>
