added view high scores and cleared out questions if button was clicked. Formated document, removed unnecessary code, and added comments to organize code.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h3>View Highscores</h3>
+      <h3 id="view-scores">View Highscores</h3>
       <h3 id="timer"></h3>
     </header>
     <div class="container">
