--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </section>
       <section id="enter-score" class="display">
         <h2>All Done!</h2>
-        <p>Final Score</p>
+        <p id="final-score">Final Score</p>
         <input
           type="text"
           name="user-initials"
