--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
       </section>
       <section id="quiz-container" class="display">
         <h3 id="question">Questions</h3>
-        <p id="answer-zero" class="box" data-number="0">answer zero</p>
-        <p id="answer-one" class="box" data-number="1">answer one</p>
-        <p id="answer-two" class="box" data-number="2">answer two</p>
-        <p id="answer-three" class="box" data-number="3">answer three</p>
+        <div id="answers">
+          <p id="answer-zero" class="box" data-number="0"></p>
+          <p id="answer-one" class="box" data-number="1"></p>
+          <p id="answer-two" class="box" data-number="2"></p>
+          <p id="answer-three" class="box" data-number="3"></p>
+        </div>
       </section>
       <section id="enter-score" class="display">
         <h2>All Done!</h2>
